# revenueos

./: .env.example  .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: .env.example  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_core_business_entities.py  0003_meeting_domain.py  0004_ai_database_foundation.py  0005_ai_domain_services.py  0006_ai_worker_queue.py  0007_executive_summary.py  0008_decisions.py  0009_action_items.py  0010_risks_blockers.py  0011_open_questions.py  0012_follow_up_email.py  0013_buying_signals.py  0014_objections_competitive_signals.py  0015_stakeholder_intelligence.py  0016_next_best_action.py  0017_opportunity_workspace.py
apps/api/src/revenueos/: __init__.py  ai_action_items_dates.py  (+50 more)
apps/api/tests/: conftest.py  test_action_items.py  test_ai_database.py  test_ai_openai_provider.py  test_ai_prompt_registry.py  test_ai_providers.py  test_ai_repositories.py  test_ai_services.py  test_ai_structured_output.py  test_ai_worker.py  test_ai_worker_postgresql.py  test_api.py  test_business_api.py  test_business_validation.py  test_buying_signals.py  test_decisions.py  test_executive_summary.py  test_follow_up_email.py  test_meeting_api.py  test_meeting_intelligence_workspace.py  test_meeting_validation.py  test_migrations.py  test_next_best_action.py  test_objections_competitive_signals.py  test_open_questions.py  test_opportunity_workspace.py  test_risks_blockers.py  test_rls.py  test_stakeholder_intelligence.py  test_tenant.py
(+172 files in other folders)
