[project]
name = "revenueos-api"
version = "0.3.0"
description = "RevenueOS AI tenant-isolated core business and Meeting Domain API"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.15.0,<2.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "email-validator>=2.2.0,<3.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "pydantic>=2.10.0,<3.0.0",
  "pydantic-settings>=2.7.0,<3.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "sqlalchemy[asyncio]>=2.0.36,<3.0.0",
  "uvicorn[standard]>=0.34.0,<1.0.0",
]

[build-system]
requires = ["hatchling>=1.27.0,<2.0.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "aiosqlite>=0.20.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "mypy>=1.15.0,<2.0.0",
  "pytest>=8.3.0,<9.0.0",
  "pytest-cov>=6.0.0,<7.0.0",
  "ruff>=0.9.0,<1.0.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["src/revenueos"]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["revenueos"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
